--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,7 @@ coverage.xml
 *.cover
 .hypothesis/
 .pytest_cache/
+pytest.ini
 
 # Translations
 *.mo
@@ -89,6 +90,9 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+.bashrc
+.idea/
+.vscode/
 
 # Spyder project settings
 .spyderproject
