--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ before_install:
 install:
   - pip3 install -r requirements.txt
 script:
-    - py.test --cov=app
+    - py.test --cov=app tests/
 after_success:
     - coveralls
