--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ autopep8==1.3.5
 Click==7.0
 colorama==0.4.0
 Flask==1.0.2
+flask-jwt-extended==3.13.1
 flask-restplus==0.12.1
 gunicorn==19.9.0
 isort==4.3.4
@@ -20,6 +21,7 @@ pip==18.1
 pep8==1.7.1
 pluggy==0.8.0
 py==1.7.0
+PyJWT==1.6.4 
 pylint==2.1.1
 pytest==3.8.2
 pytz==2018.5
